app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --text-color: #3c3c3c;
  --base-background-color: #ffffff;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: #000000;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
}

@layer base {
  body {
    @apply text-black bg-white min-h-screen grid grid-rows-[min-content_1fr_min-content] grid-cols-1;
  }
  main {
    @apply bg-white mb-9 mx-2.5 md:mx-12 xl:mx-52;
  }
  section {
    @apply mt-9
  }
  h1 {
    @apply font-semibold text-3xl md:text-4xl;
  }
  h2 {
    @apply font-semibold text-xl md:text-2xl;
  }
  h3 {
    @apply font-semibold text-lg;
  }
  hr {
    @apply w-52 md:w-96 h-1 mx-auto my-3 bg-fi-300 border-0 rounded
  }
  input {
    @apply input input-bordered
  }
  textarea {
    @apply textarea textarea-bordered
  }
}

@layer components {
  .card {
    @apply shrink-0 w-full max-w-sm shadow-2xl bg-base-100;
  }
  .btn {
    @apply bg-fi-300
  }
  .hero {
    @apply bg-white min-h-max;
  }
  .custom-carousel {
    position: relative;
    width: 99.5vw;
    left: calc(-50vw + 50%);
  }
  .hero-title {
    @apply md:text-5xl font-semibold sm:text-4xl;
  }
  .page {
    @apply mt-9
  }
  .data-display {
    @apply bg-base-100 shadow-md rounded-none card-compact md:card-normal
  }
}

